# rent-car-demo-rust

./: Cargo.toml  README.md
src/: main.rs
src/handlers/: mod.rs
src/handlers/authetication_handlers/: mod.rs
src/handlers/user_handlers/: mod.rs
src/handlers/vehicle_handlers/: mod.rs
src/model/: mod.rs
src/model/user/: mod.rs
src/model/vehicle/: mod.rs
src/repositories/: mod.rs
src/repositories/user_repository/: mod.rs
src/repositories/vehicle_repository/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
