[package]
name = "rent-car-demo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.7.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"